syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

message User {
  int64 id = 1;
  string lastname = 2;
  string firstname = 3;
  string middlename = 4;
  int32 age = 5;
  enum Gender {
    MALE = 0;
    FEMALE = 1;
  }
  Gender gender = 6;
}

message RegistrationResult {
  bool succeeded = 1;
  string error = 2;
}

message ListUsersInput {}

service RegistrationService {
  rpc RegisterUser(User) returns (RegistrationResult);
  rpc GetUserById(google.protobuf.Int64Value) returns(User);
  rpc listUsers(ListUsersInput) returns (stream User);
}
